yaml/grpctest.v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpctest
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    #port name prefix is important to determine protocol eg. grpc, http...
    name: grpc-test
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http-health
  selector:
    app: grpctest
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpctest-md
  labels:
    app: grpctest
    auth: apikey
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: grpctest
        auth: apikey
    spec:
      containers:
      - name: grpctest
        image: gcr.io/zing-registry-188222/grpctest:poc-test
        ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8081
            protocol: TCP
