yaml/_rate_redis.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: redis-ext
spec:
  hosts:
  - redis.external.mesh.io # not used
  addresses:
  - 10.64.0.3
  ports:
  - number: 6379
    name: redis
    protocol: TCP
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
  - address: 10.64.0.3
