yaml/api-key-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-key-server
  namespace: default
spec:
  ports:
  - port: 8000
    targetPort: 8080
    protocol: TCP
  selector:
    app: api-key-server
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-key-server
  namespace: default
spec:
  hosts:
  - 'api-key-server'
  http:
  - match:
    - port: 8000
    route:
    - destination:
        host: api-key-server
        port:
          number: 8000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-key-server
  namespace: default
spec:
  template:
    metadata:
      labels:
        app: api-key-server
    spec:
      containers:
      - name: api-key-server
        image: gcr.io/zing-registry-188222/api-key-server-istio:latest
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 37M
          limits:
            cpu: 120m
            memory: 450M
