yaml/auth0_egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: auth0-ext
spec:
  hosts:
  - zenoss-dev.auth0.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zenoss-dev.auth0.com
spec:
  hosts:
  - zenoss-dev.auth0.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - zenoss-dev.auth0.com
    route:
    - destination:
        host: zenoss-dev.auth0.com
        port:
          number: 443
      weight: 100
