yaml/poc-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  gateways:
  - grpctest-gateway
  hosts:
  - "*"
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: grpctest
        port:
          number: 8081
  - match:
    - headers:
        poc-check:
          exact: poc
    route:
    - destination:
        host: grpctest-even
        port:
          number: 8080
  - match:
    - port: 443
    route:
    - destination:
        host: grpctest
        port:
          number: 8080
